// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser library statements adds error for library statements NOT at top of file 1`] = `
Object {
  "errors": Array [
    [Error: Library statements may only appear at the top of a file],
  ],
  "statements": Array [
    Function {
      "func": Function {
        "body": Block {
          "startingLocation": Object {
            "end": Object {
              "column": 19,
              "line": 3,
            },
            "file": "",
            "start": Object {
              "column": 12,
              "line": 3,
            },
          },
          "statements": Array [],
        },
        "end": Object {
          "isReserved": false,
          "kind": 55,
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": 19,
              "line": 3,
            },
            "file": "",
            "start": Object {
              "column": 12,
              "line": 3,
            },
          },
          "text": "end sub",
        },
        "keyword": Object {
          "isReserved": true,
          "kind": 82,
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": 15,
              "line": 2,
            },
            "file": "",
            "start": Object {
              "column": 12,
              "line": 2,
            },
          },
          "text": "sub",
        },
        "parameters": Array [],
        "returns": 10,
      },
      "name": Object {
        "isReserved": false,
        "kind": 28,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": 20,
            "line": 2,
          },
          "file": "",
          "start": Object {
            "column": 16,
            "line": 2,
          },
        },
        "text": "main",
      },
    },
    Library {
      "tokens": Object {
        "filePath": Object {
          "isReserved": false,
          "kind": 29,
          "literal": BrsString {
            "kind": 2,
            "value": "v30/bslCore.brs",
          },
          "location": Object {
            "end": Object {
              "column": 37,
              "line": 4,
            },
            "file": "",
            "start": Object {
              "column": 20,
              "line": 4,
            },
          },
          "text": "\\"v30/bslCore.brs\\"",
        },
        "library": Object {
          "isReserved": false,
          "kind": 28,
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": 19,
              "line": 4,
            },
            "file": "",
            "start": Object {
              "column": 12,
              "line": 4,
            },
          },
          "text": "Library",
        },
      },
    },
  ],
}
`;

exports[`parser library statements adds error for library statements inside of function body 1`] = `
Object {
  "errors": Array [
    [Error: Library statements may only appear at the top of a file],
  ],
  "statements": Array [
    Function {
      "func": Function {
        "body": Block {
          "startingLocation": Object {
            "end": Object {
              "column": 23,
              "line": 3,
            },
            "file": "",
            "start": Object {
              "column": 16,
              "line": 3,
            },
          },
          "statements": Array [
            Library {
              "tokens": Object {
                "filePath": Object {
                  "isReserved": false,
                  "kind": 29,
                  "literal": BrsString {
                    "kind": 2,
                    "value": "v30/bslCore.brs",
                  },
                  "location": Object {
                    "end": Object {
                      "column": 41,
                      "line": 3,
                    },
                    "file": "",
                    "start": Object {
                      "column": 24,
                      "line": 3,
                    },
                  },
                  "text": "\\"v30/bslCore.brs\\"",
                },
                "library": Object {
                  "isReserved": false,
                  "kind": 28,
                  "literal": undefined,
                  "location": Object {
                    "end": Object {
                      "column": 23,
                      "line": 3,
                    },
                    "file": "",
                    "start": Object {
                      "column": 16,
                      "line": 3,
                    },
                  },
                  "text": "Library",
                },
              },
            },
          ],
        },
        "end": Object {
          "isReserved": false,
          "kind": 55,
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": 19,
              "line": 4,
            },
            "file": "",
            "start": Object {
              "column": 12,
              "line": 4,
            },
          },
          "text": "end sub",
        },
        "keyword": Object {
          "isReserved": true,
          "kind": 82,
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": 15,
              "line": 2,
            },
            "file": "",
            "start": Object {
              "column": 12,
              "line": 2,
            },
          },
          "text": "sub",
        },
        "parameters": Array [],
        "returns": 10,
      },
      "name": Object {
        "isReserved": false,
        "kind": 28,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": 20,
            "line": 2,
          },
          "file": "",
          "start": Object {
            "column": 16,
            "line": 2,
          },
        },
        "text": "main",
      },
    },
  ],
}
`;

exports[`parser library statements supports library statements at top of file 1`] = `
Object {
  "errors": Array [],
  "statements": Array [
    Library {
      "tokens": Object {
        "filePath": Object {
          "isReserved": false,
          "kind": 29,
          "literal": BrsString {
            "kind": 2,
            "value": "v30/bslCore.brs",
          },
          "location": Object {
            "end": Object {
              "column": 37,
              "line": 2,
            },
            "file": "",
            "start": Object {
              "column": 20,
              "line": 2,
            },
          },
          "text": "\\"v30/bslCore.brs\\"",
        },
        "library": Object {
          "isReserved": false,
          "kind": 28,
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": 19,
              "line": 2,
            },
            "file": "",
            "start": Object {
              "column": 12,
              "line": 2,
            },
          },
          "text": "Library",
        },
      },
    },
    Function {
      "func": Function {
        "body": Block {
          "startingLocation": Object {
            "end": Object {
              "column": 19,
              "line": 4,
            },
            "file": "",
            "start": Object {
              "column": 12,
              "line": 4,
            },
          },
          "statements": Array [],
        },
        "end": Object {
          "isReserved": false,
          "kind": 55,
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": 19,
              "line": 4,
            },
            "file": "",
            "start": Object {
              "column": 12,
              "line": 4,
            },
          },
          "text": "end sub",
        },
        "keyword": Object {
          "isReserved": true,
          "kind": 82,
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": 15,
              "line": 3,
            },
            "file": "",
            "start": Object {
              "column": 12,
              "line": 3,
            },
          },
          "text": "sub",
        },
        "parameters": Array [],
        "returns": 10,
      },
      "name": Object {
        "isReserved": false,
        "kind": 28,
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": 20,
            "line": 3,
          },
          "file": "",
          "start": Object {
            "column": 16,
            "line": 3,
          },
        },
        "text": "main",
      },
    },
  ],
}
`;
